# PasswordManager

./: .gitignore  CMakeLists.txt  README.md  constants.cpp  index.cpp  main.cpp
DB/: db.cpp  files.cpp
btree/: main.cpp
btree/header_files/: bplustree.hpp  data_page.hpp  index_page.hpp  page.hpp  property.hpp  record.hpp
btree/index/record/: index_by_id_1.tree
btree/src/: bplustree.tpp  data_page.tpp  index_page.tpp  page.tpp  property.cpp
btree/utils/: buffer_size.hpp  error_handler.hpp  file_utils.hpp  time_utils.hpp
crypto/: guide.txt  index.cpp
cryptolib/: files.cpp  keys.cpp
database_folder/: private_key.txt  public_key.txt  storage.json
db_logic/: data.cpp  data.db  db_delete.cpp  db_insert.cpp  db_update.cpp  db_view.cpp  index.cpp  index.idx  password_db.cpp  password_db.h  passwords.tbl
guides/: cmake.txt  openssl.txt
utility/: color.h  data.cpp
